# acordes

./: .gitignore  IDEAS.md  LICENSE  README.md  chord.py  chords.py  chromatic_scale.py  colors.json  mypy.ini  options.json  pyproject.toml  test.py  tuning.py
acordes/: __init__.py  chord.py  formatting.py  fret.py  note.py  tuning.py
src/acordes/: chord.py  example.py  formatting.py  instruments.py  note.py  tuning.py
src/acordes.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_chord.py  test_freatboard.py  test_instruments.py  test_note.py  test_tuning.py
